Hotfix: Company Card Creator - Fixed layout issues, setFields(), and setPlaceholder().

--- a/sites/all/modules/custom/company_card_creator/css/company_card_creator.css
+++ b/sites/all/modules/custom/company_card_creator/css/company_card_creator.css
@@ -61,12 +61,10 @@
   width: 25%;
 }
 #rightColumn #templatesFront {
-  height: 715px;
   width: 100%;
 }
 #rightColumn #templatesFrontDisplay {
   border: 1px solid black;
-  height: 365px;
   overflow: scroll;
 }
 #container #bottomColumn {
